--- a/Sicsoft.Checkin.Web/Pages/OrdenVenta/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OrdenVenta/Index.cshtml
@@ -97,7 +97,8 @@
                             text: 'Ha ocurrido un error al intentar procesar ' + json
 
                         })
-                        $("#divProcesando").hide();
+                        $("#divProcesando").modal("hide");
+
 
                     }
                 },
@@ -108,6 +109,7 @@
 
                 },
                 complete: function() {
+                    $("#divProcesando").modal("hide");
 
                 },
                 error: function(error) {
