--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Index.cshtml
@@ -277,7 +277,7 @@
                                     @{
                                         var id = item.idTecnico.ToString();
                                     }
-                                    <td>@Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre</td>
+                                    <td>@(Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault() == null ?  "": Model.Tecnicos.Where(a => a.idSAP == id).FirstOrDefault().Nombre)</td>
 
                                     <td>@item.FechaCreacion.ToString("dd/MM/yyyy")</td>
                                     <td>@item.FechaModificacion.ToString("dd/MM/yyyy HH:mm:ss")</td>
