--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Editar.cshtml
@@ -1431,7 +1431,7 @@
                                     <option value="0" selected>Abierto</option>
 
 
-                                    <option value="1">Cerrado </option>
+                                   @* <option value="1">Cerrado </option>*@
                                     <option value="2">Cerrado y Reparado </option>
 
 
