--- a/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Usuarios/Editar.cshtml
@@ -317,6 +317,18 @@
                                 <input type="text" id="CodBodega" class="form-control form-control-lg" asp-for="Input.Bodega" required placeholder="Cod Vendedor SAP">
                             </div>
                         </div>
+                        <div class="col-md-4 pr-1">
+                            <div class="form-group">
+                                <label for="CVentas">Correo Ventas</label>
+                                <input type="text" id="CVentas" class="form-control form-control-lg" asp-for="Input.CorreoVentas" required placeholder="Correo Ventas">
+                            </div>
+                        </div>
+                        <div class="col-md-4 pl-1">
+                            <div class="form-group">
+                                <label for="Telefon">No. Teléfono</label>
+                                <input type="tel" id="Telefon" class="form-control form-control-lg" asp-for="Input.Telefono" required placeholder="0000-0000">
+                            </div>
+                        </div>
                     </div>
 
                     <div class="row">
