--- a/Sicsoft.Checkin.Web/Pages/OfertaVenta/Nuevo.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/OfertaVenta/Nuevo.cshtml
@@ -821,6 +821,8 @@
                     idCondPago: $("#condPago").val(),
                     idGarantia: $("#tipoGarantia").val(),
                     idTiemposEntregas: $("#tiemposEntrega").val(),
+                    idDiasValidos: $("#DiasValidos").val(),
+
                     DocEntry: 0,
                     DocNum: 0,
                     CardCode: $("#cliente").val(),
@@ -1198,6 +1200,21 @@
                         </div>
                     </div>
 
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label>Dias Valido:</label>
+                            <select id="DiasValidos" class="form-control" required asp-for="Orden.idDiasValidos">
+
+                                @foreach (var item in Model.DiasValidos)
+                                {
+                                    <option value="@item.id">@item.Nombre</option>
+                                }
+
+
+                            </select>
+
+                        </div>
+                    </div>
                 </div>
             </div>
 
